--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,17 +28,21 @@ Project File Date:  12/28/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(225): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(231): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   						snprintf(velocityASCII,10000,"v %d\r",velocity[icom]) ;
-../Src/main.c(228): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
+../Src/main.c(233): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  						snprintf(gasvaluesASCII,10000,"\t\tg %d\r",gasvalues[icom]) ;	// Umwandlung in ASCII
+../Src/main.c(234): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  						snprintf(lenkenvaluesASCII,10000,"\t\t\tl %d\n\r",lenkenvalues[icom]) ;	// Umwandlung in ASCII
+../Src/main.c(236): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
   						HAL_UART_Transmit(&huart3,steeringASCII,sizeof(steeringASCII),1);
-../Src/main.c(126): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(130): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
-../Src/main.c: 3 warnings, 0 errors
+../Src/main.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=24968 RO-data=568 RW-data=492 ZI-data=71876  
+Program Size: Code=25084 RO-data=568 RW-data=492 ZI-data=111876  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
