--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -26,8 +26,67 @@ Project File Date:  01/03/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'ProjectCube'
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 0 Warning(s).
+Rebuild target 'ProjectCube'
+compiling FuzzyV1_F4.c...
+..\Src\FuzzyV1_F4.c(226): warning:  #144-D: a value of type "const char *" cannot be used to initialize an entity of type "const signed char *"
+     FuzzyV1_F4_RuleBase_pre,
+..\Src\FuzzyV1_F4.c: 1 warning, 0 errors
+assembling startup_stm32f767xx.s...
+compiling NumType_F4.c...
+compiling fuzzy_F4.c...
+compiling stm32f7xx_it.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling MY_FLASH.c...
+..\Src\MY_FLASH.c(115): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\MY_FLASH.c: 1 warning, 0 errors
+compiling stm32f7xx_hal_msp.c...
+compiling usb_device.c...
+compiling stm32f7xx_hal_flash.c...
+compiling system_stm32f7xx.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling usbd_cdc_if.c...
+compiling usbd_desc.c...
+compiling main.c...
+../Src/main.c(102): warning:  #177-D: variable "setval"  was declared but never referenced
+  	int setval = 0;
+../Src/main.c(103): warning:  #550-D: variable "uwtick_Hold10ms"  was set but never used
+  	static int32_t uwtick_Hold10ms;
+../Src/main.c(104): warning:  #550-D: variable "uwtick_Hold100ms"  was set but never used
+    static int32_t uwtick_Hold100ms; 
+../Src/main.c(105): warning:  #550-D: variable "uwtick_Hold1s"  was set but never used
+    static int32_t uwtick_Hold1s;
+../Src/main.c: 4 warnings, 0 errors
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling usbd_conf.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_exti.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal_eth.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_adc_ex.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling usbd_ioreq.c...
+compiling usbd_core.c...
+compiling usbd_ctlreq.c...
+compiling usbd_cdc.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_uart.c...
+linking...
+Program Size: Code=23288 RO-data=568 RW-data=468 ZI-data=31940  
+FromELF: creating hex file...
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +109,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
